--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <!-- My files-->
+    <link rel="stylesheet" href="styles.css">
+    <script type = "text/javascript" src="index.js"></script>
     <title>Hello, world!</title>
   </head>
   <body>
@@ -41,13 +43,14 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search_form">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="button" id = "search_button" onclick="getSymbolOnClick()">Search</button>
         </form>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
-
+    <!--<iframe allowtranparency="true" frameborder="0" style="border: 0px; width: 300px; height: 300px;" scrolling="no" src="//api.stocktwits.com/widgets/stream?width=300&amp;height=300&amp;domain=127.0.0.1&amp;scrollbars=true&amp;streaming=true&amp;limit=15&amp;title=fb%20Ideas&amp;symbol=aapl&amp;border_color=cecece&amp;box_color=f5f5f5&amp;header_text_color=000000&amp;divider_color=cecece&amp;stream_color=ffffff&amp;divider_type=solid&amp;link_color=4871a8&amp;link_hover_color=4871a8&amp;text_color=000000&amp;time_color=999999"></iframe>
+    -->
+      <iframe allowtranparency="true" frameborder="0" style="border: 0px; width: 0px; height: 0px;" scrolling="no" id="stocktwits_widget"></iframe>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
