--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search_form">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search for a stock here." aria-label="Search" id = "search_form">
           <button class="btn btn-outline-success my-2 my-sm-0" type="button" id = "search_button" onclick="getSymbolOnClick()">Search</button>
         </form>
       </div>
